--- a/views/page3.handlebars
+++ b/views/page3.handlebars
@@ -1,18 +1,46 @@
 <html lang="en">
+
 <head>
-  <meta charset="utf-8"/>
+  <meta charset="utf-8" />
   <!-- passed in variables in handlebars are surrounded by two curly braces like the following
        Any variable you pass into res.render will be available by name in the template through
        the curly braces
   -->
   <title>{{title}}</title>
 </head>
+
 <body>
   <h1>Welcome to page 3</h1>
-  
+
   <!-- links or URLs are always GET resources as they are getting (retrieving) a resource -->
   <a href="/">Home</a>
   <a href="/page1">Page 1</a>
   <a href="/page2">Page 2</a>
+   <a href="/page4">Page 4</a>
+
+  <!--Dog lookup form-->
+  <h2>Find a dog:</h2>
+  <form action="/lookup" id="search-dog" method="GET">
+    <label for 'nameInput'>Type in a name</label>
+    <input type="text" name='nameInput'>
+    <input type="submit" value="submit">
+  </form>
+
+
+  <h2>Add a dog:</h2>
+
+  <form action="/addDog" id="make-dog" method="POST">
+    <label for 'name'>Name:</label>
+    <input type="text" name='name'>
+    <label for 'breed'>Breed:</label>
+    <input type="text" name='breed'>
+    <label of 'age'>Age</label>
+    <input type="text" name='age'>
+
+    <input type="submit" value="submit">
+
+  </form>
+
 </body>
+
 </html>
